--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </a>
     </h1>
     <p>I'm Meaghan, a London-based <i>Product Designer</i> who really needs to update <i>her portfolio</i>.</p>
-      <p><u><a href="https://meaghanli.webflow.io/">Take a sneak peek</a></u> or <u><a href="mailto:meaghan.li.nz@gmail.com?subject=Hello" target="_blank">Get in touch</a></u></p>
+      <p><u><a href="mailto:meaghan.li.nz@gmail.com?subject=Hello" target="_blank">Get in touch</a></u></p>
   </div>
 </body>
 </html>
