Add portfolio WIP link

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
           <span class="wrap"></span>
         </a>
     </h1>
-    <p>I'm Meaghan, a London-based <i>Product Designer</i> who really needs to update <i>her portfolio</i>.</p>
-    <p><u><a href="mailto:meaghan.li.nz@gmail.com?subject=Hello" target="_blank">Get in touch</a></u></p>
+    <h2>
+      I'm Meaghan, a London-based <i>Product Designer</i> who really needs to update <i>her portfolio</i>.
+    </h2>
+    <p><u><a href="mailto:meaghan.li.nz@gmail.com?subject=Hello" target="_blank">Get in touch</a></u> or <u><a href="https://meaghanli.webflow.io/?utm_source=portfolio&utm_medium=website&utm_campaign=portfolio" target="_blank">Take a sneak peek</a></u></p>
   </div>
 </body>
 </html>
